--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.15.2",
     "axios": "^0.18.0",
-    "bootstrap": "^4.3.1",
-    "jquery": "^3.3.1",
     "node-sass": "^4.11.0",
-    "popper.js": "^1.14.7",
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
