--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "teamcalen",
   "version": "0.1.0",
-  "proxy": "http://localhost:8080",
+  "proxy": "https://teamcalen.soulike.tech",
   "private": true,
   "dependencies": {
-    "@babel/polyfill": "^7.4.3",
-    "antd": "^3.16.3",
+    "antd": "^3.16.6",
     "axios": "^0.18.0",
+    "core-js": "^3.0.1",
     "moment": "latest",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-redux": "^6.0.1",
-    "react-router": "^3.2.1",
-    "react-scripts": "2.1.8",
+    "react-redux": "^7.0.3",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "3.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
@@ -30,7 +30,7 @@
   "browserslist": [
     ">0.2%",
     "not dead",
-    "not ie <= 9",
+    "not ie <= 8",
     "not op_mini all"
   ]
 }
