--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-app-polyfill": "^1.0.0",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
@@ -33,11 +32,11 @@
       ">0.2%",
       "last 2 versions",
       "not dead",
-      "ie 11",
       "not op_mini all"
     ],
     "development": [
-      "last 1 chrome version"
+      "last 1 chrome version",
+      "last 2 edge versions"
     ]
   }
 }
