--- a/package.json
+++ b/package.json
@@ -46,5 +46,9 @@
       "last 2 edge versions",
       "ie 10-11"
     ]
+  },
+  "devDependencies": {
+    "@types/faker": "^4.1.5",
+    "faker": "^4.1.0"
   }
 }
